<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>lll_msgs</name>
  <version>0.5.0</version>
  <description>3Laws messages - ROS1</description>
  <maintainer email="tgurriet@3laws.io">Thomas Gurriet</maintainer>
  <license>Exclusive property of 3Laws Robotics Inc.</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rosgraph_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>stereo_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>visualization_msgs</depend>

  <exec_depend>message_runtime</exec_depend>

</package>
