<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>lll_rdm_msgs</name>
  <version>0.9.1</version>
  <description>3Laws robot diagnostic module messages - ROS1</description>
  <maintainer email="tgurriet@3laws.io">Thomas Gurriet</maintainer>
  <license>Exclusive property of 3Laws Robotics Inc.</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <depend>lll_msgs</depend>

  <exec_depend>message_runtime</exec_depend>

</package>
