<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lll_rdm_msgs</name>
  <version>0.9.4</version>
  <description>3Laws robot diagnostic module messages - ROS2</description>
  <maintainer email="tgurriet@3laws.io">Thomas Gurriet</maintainer>
  <license>Exclusive property of 3Laws Robotics Inc.</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>builtin_interfaces</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>lll_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
